# fly_car_case1

./: readme
Idenvention/cv_bridge/: CMakeLists.txt
Idenvention/observe_msgs/: CMakeLists.txt  package.xml
Idenvention/observe_msgs/msg/: GetImages.msg  Gnss.msg  Imu.msg  InfradImage.msg  MovObject.msg  ReconnaissanceInfo.msg  TotalMovObject.msg  xypixel.msg  xypixelStamped.msg
Idenvention/observe_msgs/srv/: Reconnaissance.srv  activatePlugins.srv  getPlatformActorName.srv  getSensorActorTopic.srv  loadPlugins.srv  taskReconnaissance.srv
Idenvention/videoread/: CMakeLists.txt  package.xml
Idenvention/videoread/include/videoread/: video_sub.h
Idenvention/videoread/msg/: xypixel.msg
Idenvention/videoread/src/: video_pub.cpp  video_sub.cpp
command/Identification/: CMakeLists (复件).txt  CMakeLists.txt  package.xml
command/Identification/include/: ipath_base.h  path_follower_base.h  path_manager_base.h  path_manager_example.h
command/Identification/src/: Task_manager.cpp  Task_manager.h  ipath_planner (复件).cpp  ipath_planner.cpp  ipath_planner1 (复件).cpp  ipath_planner1.cpp  ipath_planner10.cpp  ipath_planner11.cpp  ipath_planner12.cpp  ipath_planner13.cpp  ipath_planner14.cpp  ipath_planner15.cpp  ipath_planner16.cpp  ipath_planner17.cpp  ipath_planner18.cpp  ipath_planner19.cpp  ipath_planner2.cpp  ipath_planner20.cpp  ipath_planner21.cpp  ipath_planner22.cpp  ipath_planner23.cpp  ipath_planner24.cpp  ipath_planner27 (复件).cpp  ipath_planner27.cpp  ipath_planner28.cpp  ipath_planner3.cpp  ipath_planner4 (复件).cpp  ipath_planner4.cpp  ipath_planner5.cpp  ipath_planner6.cpp  ipath_planner7.cpp  ipath_planner8.cpp  ipath_planner9.cpp  manager.cpp  manager.h
command/msg/: CMakeLists.txt  package.xml
command/msg/msg/: IWaypoint.msg  Waypoint (复件).msg  Waypoint.msg
command/plan/: CMakeLists.txt  package.xml
command/plan/src/: path_planner (复件).cpp  path_planner.cpp  path_planner1.cpp  path_planner10.cpp  path_planner11.cpp  path_planner2.cpp  path_planner3.cpp  path_planner4.cpp  path_planner5.cpp  path_planner6.cpp  path_planner7.cpp  path_planner8.cpp  path_planner9.cpp
command/plan/words/: drone_true.world  drone_true1.world  drone_true2.world
gazebotest/: mainpage.dox  manifest.xml
gazebotest/config/: fake_mrobot_arbotix.yaml
gazebotest/launch/: find_car_control.launch
gazebotest/urdf/: gazebo_ros_control.xacro  libgazebo_ros_p3d.xacro  my_car.xacro  my_move_robot.xacro  skid_steer_drive_controller.xacro
gazebotest/worlds/: kunming_airport.world
mrobot_teleop/scripts/: mrobot_teleop.py
